syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Protobuf/reference/acs12.proto";

// Define the namespace of this class.
option csharp_namespace = "AElf.Contracts.HelloWorld";

service HelloWorld {
    // Declare a state class, need to create a corresponding state class file.
    option (aelf.csharp_state) = "AElf.Contracts.HelloWorld.HelloWorldState";
    option (aelf.base) = "Protobuf/reference/acs12.proto";
    
    // Actions
    // Define methods name and input/output.
    rpc Initialize (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc CreateSCTransaction (SCTransactionInput) returns (google.protobuf.Empty);

    // Views
    rpc GetSCTransaction (aelf.Address) returns (SCTransactionData) {
        option (aelf.is_view) = true;
    }
}

message SCTransactionInput {
    string recipient = 1;
    string item = 2;
    int32 quantity = 3;
    int32 amount = 4;
}

message SCTransactionData {
    aelf.Address sender = 1;
    string recipient = 2;
    string item = 3;
    int32 quantity = 4;
    int32 amount = 5;
}